# agentscope

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Agent.md  CLAUDE.md  CONTRIBUTING.md  Comorag 与 Hydrarag 优势与改进 (1).md  FRAMEWORK_COMPLIANCE_FINAL_REPORT.md  HIVA_IMPLEMENTATION_COMPLETE.md  Makefile  MemTool 論文對 AgentScope 的啟示.md  PR_DESCRIPTION.md  QuickSort.java  README.md  README_JA.md  README_ZH.md  README_zh.md  agentscope_analysis.html  commit_message.txt  example_messages_save.py  fix_assets.py  genindex.html  index.html  manage.py  my_agent.py  objects.inv  plan.md  py-modindex.html  pyproject.toml  pytest.ini  quickstart_test.py  relation_zettel.db  run_candidate_check.py  search.html  searchindex.js  setup.py  sg_execution_times.html  test_creator_headless.py  test_key.py  (+10 more)
_modules/: agentscope.html  index.html
_sources/: sg_execution_times.rst.txt
agent-app/: .gitignore  CLAUDE.local.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
agent-app/.claude/plan/: 配置化架构重构.md
agent-app/src/storage/: __init__.py  database.py
agent-app/src/types/: __init__.py  base_models.py  events.py  exceptions.py
agent-app/src/util/: __init__.py  graceful_shutdown.py
anonimgit/: asgi.py  settings.py  urls.py  wsgi.py
anonimgitapp/: apps.py  forms.py  models.py  views.py
api/: agentscope.a2a.html  agentscope.agent.html  agentscope.embedding.html  agentscope.evaluate.html  agentscope.exception.html  agentscope.formatter.html  agentscope.hooks.html  agentscope.html  agentscope.mcp.html  agentscope.memory.html  agentscope.message.html  agentscope.model.html  agentscope.module.html  agentscope.pipeline.html  agentscope.plan.html  agentscope.rag.html  agentscope.session.html  agentscope.token.html  agentscope.tool.html  agentscope.tracing.html  agentscope.tts.html  agentscope.tune.html  agentscope.tuner.html  agentscope.types.html  modules.html
app/: README.md
app/backend/: README.md  pyproject.toml
app/backend/app/: ai_registry.py  config.py  main.py
app/backend/app/agents/: relation_factory_agent.py
app/backend/app/db/: audit.py  models.py  session.py
app/backend/app/prompts/: relation_factory.md
app/backend/app/routers/: audit.py  canvas.py  config.py  metrics.py  notes.py  relations.py  review.py
app/backend/app/schemas/: relations.py
app/backend/app/services/: audit.py  emb.py  entities.py  fts.py  neigh.py  provider.py  relation_factory.py  relations.py  scoring.py
app/backend/tests/: test_canvas_workflow.py  test_relation_factory_service.py
config/: unified_config.json
docs/: FAQ.md  FAQ_zh.md  NEWS.md  NEWS_zh.md  SOP.md  apple-container-workspace.md  error.txt  roadmap.md
examples/: test.py
examples/agent/a2ui_agent/samples/agent/as/: pyproject.toml
examples/agent/a2ui_agent/samples/agent/as/restaurant_finder/: README.md  a2ui_examples.py  a2ui_utils.py  agent_card.py  prompt_builder.py  setup_a2ui_server.py  tools.py
memory/: Alice.json  Bob.json  Charlie.json
(+3326 files in other folders)
