[tool.poetry]
name = "relation-zettel-backend"
version = "0.1.0"
description = "FastAPI service for the Relation-Zettel platform"
authors = ["TBD <team@example.com>"]
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
SQLAlchemy = "^2.0.32"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
agentscope = "*"
openai = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
