[project]
name = "a2ui-restaurant-finder-as"
version = "0.1.0"
description = "Sample AgentScope-based Restaurant finder agent that uses a2ui UI and is hosted as an A2A server agent."
requires-python = ">=3.10"
dependencies = [
    "agentscope",
    "agentscope-runtime",
    "uvicorn",
    "starlette",
    "fastapi",
    "shortuuid",
    "a2ui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
a2ui = { path = "../../../../../../../a2ui/a2a_agents/python/a2ui_extension" }
agentscope-runtime = { path = "../../../../../../../agentscope-runtime" }